infra/k8s/activity-listener-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-listener-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activity-listener
  template:
    metadata:
      labels:
        app: activity-listener
    spec:
      containers:
        - name: activity-listener
          image: us.gcr.io/stravatargettracker/activity-listener
---
apiVersion: v1
kind: Service
metadata:
  name: activity-listener-srv
spec:
  selector:
    app: activity-listener
  ports:
    - name: activity-listener
      protocol: TCP
      port: 3000
      targetPort: 3000
