infra/k8s/strava-token-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strava-token-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strava-token
  template:
    metadata:
      labels:
        app: strava-token
    spec:
      containers:
        - name: strava-token
          image: us.gcr.io/stravatargettracker/strava-token
---
apiVersion: v1
kind: Service
metadata:
  name: strava-token-srv
spec:
  selector:
    app: strava-token
  ports:
    - name: strava-token
      protocol: TCP
      port: 3000
      targetPort: 3000
