infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /test
            backend:
              serviceName: strava-token-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: strava-token-srv
              servicePort: 3000
